<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboardactivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="top|center"
        android:paddingBottom="32dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@color/colorPrimary"
            android:elevation="12dp"
            android:orientation="vertical"
            android:padding="16dp"
            tools:targetApi="lollipop">

        </LinearLayout>

        <LinearLayout
            android:elevation="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="32dp"
            android:padding="16dp"
            android:background="@color/colorPrimaryDark"
            tools:targetApi="lollipop">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/brief_info"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFFFFF"/>

            <TextView
                android:id="@+id/dbd_tv_brief_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:paddingTop="8dp"
                android:text="@string/text"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#FFFFFF" />
        </LinearLayout>
        <Button android:id="@+id/dbd_btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="0dp"
            android:layout_gravity="end"
            android:background="@color/colorAccent"
            android:text="@string/log_out"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</ScrollView>
